static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap');

.container {
    margin: auto;
}

body {
    background-color: rgba(220, 106, 106, 1);
    height: 100%;
    width: 100%;
    font-family: "Montserrat";
}

html {
    width: auto;
    height: -webkit-fill-available;
}

/* Navigation */

#navbar {
    background: rgba(214, 81, 81, 0.6);
    width: 100%; 
    z-index: 10000;
}

nav ul a {
    font-size: 1.4rem;
    color: white;
    display: block;
    padding: 0 15px;
    cursor: pointer;
}

nav .brand-logo {
    font-size: 3rem;
    padding-left: 20px;
    color: white;
}

/* Home Page */

.h2-front {
    position: absolute;
    right: 50%;
    top: 40%;
}

/* Buttons */

.btn-container {
    position: relative;
    top: 15vh;
}

.btn-container a {
    margin: 1vh;
    background-color: rgba(214, 81, 81, 1);
    border-radius: 10%;
    font-size: 16px;
}

.btn-container a:hover {
    background-color: rgba(214, 81, 81, 0.4);
}

.send-btn i {
    margin-right: 10px;
}

.register-container button {
    background-color: rgba(214, 81, 81, 1);
    border-radius: 10%;
    font-size: 20px;
    font-family: "Montserrat";
}

#general-btn {
    background-color: rgba(214, 81, 81, 1);
    border-radius: 10%;
    font-size: 20px;
    font-family: "Montserrat";
}

#edit-btn, #cancel-btn {
    background-color: rgba(214, 81, 81, 1);
    border-radius: 10%;
    font-family: "Montserrat";
}

/* Background image */

.main-image {
    height: 100vh;
    width: 100%;
    background-repeat: no-repeat;
    top: 0;
    position: absolute;
    z-index: -1;
    background: linear-gradient(to bottom, rgba(220, 106, 106, 0.3) 0%, rgba(220, 106, 106, 0.7) 75%, rgba(220, 106, 106, 1) 100%), url(../images/desktop.jpg);
}

.error-image {
    height: 100vh;
    width: 100%;
    background-repeat: no-repeat;
    top: 0;
    position: absolute;
    z-index: -1;
    background: url(../images/background-red.jpg);
}

.notes-img {
    height: 100%;
    width: 100%;
    background-repeat: no-repeat;
    position: absolute;
    z-index: -1;
    background: url(../images/book.jpg);
}

.profile-img {
    height: 100%;
    width: 100%;
    background-repeat: no-repeat;
    position: absolute;
    z-index: -1;
    background: url(../images/board.jpg);
    top: 0;
}

#profile-picture img {
    border-radius: 50%;
}

/* Header */

.header-container p {
    position: relative;
    top: 15vh;
    font-size: 30px;
    color: white;
}

.header-container h3 {
    position: relative;
    top: 15vh;
    font-size: 140px;
    color: white;
}


.icons-exp-container {
    font-size: 50px;
}

.icons-exp-container p {
    font-size: 20px;
}

/* Flashes */

.flashes h4 {
    line-height: 2;
    top: 100px;
}

/* Form container */

.form-container h2 {
    color: white;
}

.form-container {
    margin-top: 80vh;
}

/* Footer */

.social-media-container i {
    font-size: 50px;
    margin: 23px;
}

.social-media-container i {
    color: white;
}

.footer-container h5 {
    padding-bottom: 10px;
    color: white;
}

/* Collapsible */

.collapsible-body {
    background-color: white;
}

.register-container p {
    font-size: 30px;
}

.collapsible-header {
    padding: 2rem;
    background-color: rgba(214, 81, 81, 0.9);
    border-bottom: none;
    color: white;
}

.collapsible-header i {
    font-size: 20px;
    margin: 9px;
}

.collapsible-body {
    background-color: rgba(214, 81, 81, 0.49);
    border-bottom: none;
    color: white;
}

.collapsible-body p {
    font-size: 16px;
}

.collapsible-body button {
    background-color: rgba(214, 81, 81, 0.8);
    border-bottom: none;
    color: white;
}

/* Card Panel */

.card-panel {
    background-color: rgba(255, 255, 255, 0.7);
}

/* https://codepen.io/postor/pen/mskxI */

.arrows {
	width: 60px;
	height: 72px;
	position: absolute;
	left: 50%;
	margin-left: -30px;
	bottom: 20px;
}

.arrows path {
	stroke: #fff;
	fill: transparent;
	stroke-width: 1px;	
	animation: arrow 2s infinite;
	-webkit-animation: arrow 2s infinite; 
}

@keyframes arrow
{
0% {opacity:0}
40% {opacity:1}
80% {opacity:0}
100% {opacity:0}
}

@-webkit-keyframes arrow /*Safari and Chrome*/
{
0% {opacity:0}
40% {opacity:1}
80% {opacity:0}
100% {opacity:0}
}

.arrows path.a1 {
	animation-delay:-1s;
	-webkit-animation-delay:-1s; /* Safari 和 Chrome */
}

.arrows path.a2 {
	animation-delay:-0.5s;
	-webkit-animation-delay:-0.5s; /* Safari 和 Chrome */
}

.arrows path.a3 {	
	animation-delay:0s;
	-webkit-animation-delay:0s; /* Safari 和 Chrome */
}

